--- a/scss/style.scss
+++ b/scss/style.scss
@@ -308,7 +308,7 @@ body{
         
         iframe{
             border: 2px black solid;
-            border-radius: 8%;
+            border-radius: 5px;
             position: relative;
             z-index: 2;
             box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.9);
@@ -347,7 +347,7 @@ body{
     padding: 50px 0;
     text-align: center;
     background: rgb(51,82,150);
-    background: linear-gradient(180deg,$primary-red 0%, $primary-red 53%, $primary-blue 100%);
+    background: linear-gradient(180deg,black 0%, black 53%, $primary-blue 100%);
     .services__title {
         font-size: 2.3rem;
         font-family: $head-text;
@@ -358,33 +358,67 @@ body{
         position: relative;
         z-index: 1;
     }
-    
+    .controls {
+        
+        button {
+            text-align: center;
+            align-items: center;
+            position: absolute;
+            top: 50%;
+            z-index: 2;
+            background-color: rgba(51, 82, 150, 0.847);
+            padding: 4px 16px 6px 16px;
+            border: 0px ;
+            border-radius: 50%;
+            color: white;
+            font-size: 24px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: opacity 0.3s ease;
+            &:hover {
+                opacity: 0.7;
+            }
+            &:focus {
+                outline: none;
+            }
+        }
+        .prev-btn {
+            margin-right: 10px;
+            left: 10px;
+        }
+        .next-btn {
+            margin-right: 10px;
+            right: 10px;
+        }
+    }
     .card-track-marquee {
         position: relative; /* Position relative for absolute positioning */
         width: 100%; /* Ensure full width */
+        overflow: hidden;
+         
         .card-track {
-            width: calc(490px*16);
+            width: calc(450px*8);
             display: flex; /* Use flexbox for layout */
-            animation: scroll 40s linear infinite;
-                &:hover{
-                    animation-play-state: paused;
-        }
+            transition: transform 0.8s ease;  
+            
         }
         .card {
             width: 450px;
+            
             margin: 40px 20px;
             flex-shrink: 0;/* Occupy full width of the column */
             padding: 20px 30px;
             border: 0;
-            background-color: rgba(147, 212, 218, 0.801);
-            border-radius: 40px;
+            background-color: rgba(181, 177, 177, 0.881);
+            border-radius: 5px;
+            color: white;
             transition: transform 0.3s ease, box-shadow 0.3s ease; /* Combine transitions */
             box-shadow: -1px 1px 12px 5px rgba(0, 0, 0, 0.75);
             -webkit-box-shadow: -1px 1px 12px 5px rgba(0, 0, 0, 0.75);
             -moz-box-shadow: -1px 1px 12px 5px rgba(0, 0, 0, 0.75);
-            transition: transform 0.2s;
+            
             &:hover {
-                transform: scale(0.70);
+                
                 box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Increase shadow on hover */
             }
             .card__image{
@@ -400,28 +434,37 @@ body{
             }
             
             .card__title {
-                font-size: 1.4rem;
-                margin-bottom: 10px;
-                font-weight: bold;
+                font-size: 1.2rem;
+                margin-bottom: 5px;
+                font-family: $head-text;
+                text-transform: uppercase;
+                color: $primary-blue;
+                
             }
             
             .card__text {
                 font-size: 1.1rem;
-                font-weight: bold;
+                padding: 20px;
+                font-weight: 500;
+                
             }
         }
     }
 }
 
-@keyframes scroll {
-    0%{
-        transform: translateX(0);
-    }
-    100%{
-        transform: translateX(calc(-490px * 8));
+@media (max-width: 992px) {
+    .services__container{
+        .card-track-marquee{
+            .card{
+                width: 300px;
+                margin: 20px 10px;
+            }
+        }
     }
     
 }
+
+
 
 .contact__container {
     background-color: $primary-blue; /* Light gray background color */
