--- a/scss/style.scss
+++ b/scss/style.scss
@@ -456,7 +456,7 @@ body{
     .services__container{
         .card-track-marquee{
             .card{
-                width: 300px;
+                width: 95vw;
                 margin: 20px 10px;
             }
         }
